--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "dev": "node app.js",
     "setup-dbs": "psql -f ./db/seeds/setup.sql",
-    "seed": "node ./db/seeds/run-seed.js"
+    "seed": "node ./db/seeds/run-seed.js",
+    "seed-prod": "NODE_ENV=production npm run seed",
+    "start": "node listen.js"
   },
   "keywords": [],
   "author": "",
