--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,3 +43,16 @@ jobs:
 
       - name: Test App
         run: PGDATABASE=test_db PGUSER=mr_testerson PGPASSWORD=pa55w0rd npm run test-app
+
+  test-app-staging-db:
+    needs: test-app
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and Clone Repo
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Test App
+        run: NODE_ENV=production DB_URL=${{ secrets.DB_URL }} npm run test-app
